# HomeAutomation

./: .gitignore  JSONdb.var  README.md  default.js  index.html  package.json  server.js  temp.js  test.js  test2.js  test_Object.js  testing  testing.js  tv.js
config/: handler.var.js  init.js  localpaths.js
config/keys/: db.var
config/var/: db.arrays  db.bools  db.objects  db.paths  db.predefined  db.var  db.var.builder.js  keyname  keyname.array
doc/: notes.js
download/: ChainListenFunction.js
download/__MACOSX/: ._download
download/download/: example.js  index.html
inf/: Node.js Restart on File Change.url  notes
inf (Information)/: How to create Class in JavaScript.url  JavaScript – Get Object Size.url  JavaScript- get the number of properties in an object WITHOUT LOOPING.url  Object as JavaScript object’s Key.url  Should you use “var” for initializing counter variables in For - For Each loops-.url
info/: Opbouw.js
lib/: http.js  request.js
public/: index.html
resources/: init.js
resources/RPi/: init.js
resources/SmartTV/: tv.js
resources/hue/: init.js
src/HKAPI/: default.tmp.php  doOptions.php  doPause.php  doUp.php  doVolumeDown.php
src/_JSON/: JSON_GetExample.js
src/__generaljs/: Associative Arrays in JavaScript – There's None!.url  Disabling the Context Menu using JavaScript.url  JavaScript Array-like Objects.url  JavaScript – Check Object Property is Defined.url  The For Loop vs the For Each Loop in JavaScript.url
src/__other/: SetValueLedStripToValueLight-1.js  SetValueLedStripToValueLight-2.js  timeout.js  timeout2.js
src/__overige/: SetValueLedStripToValueLight-3.js  SetValueLedStripToValueLight-4.js  SetValueLedStripToValueLight-5.js  timeout3.js
src/_callback/: callbackexamples.js  temp.js
src/_express/: How to Write Middleware for Connect - Express.js.url  How to serve static HTML files in Express.js.url  Sessions in Express.js (Node.js Web Framework).url
src/_form/: Form Handling - Processing in Express.js.url  Form submission with iframe target opens in a new Window.url
src/_harmankardon/: notes
src/_http/: HTTP-GET
src/_jQuery/: jQuery with Node.js.url
src/_jointSPACE/: JointSpaceWin32_beta2.7z
src/_mysql/: Using MySQL with Node.js.url  app.js
src/_other/: Associative Arrays in JavaScript – There’s None.js  FLV to MP3 Converter in Node.js.url  How to write Node.js Modules.url  JavaScript .bind() vs .apply() and .call().url  JavaScript Email Validation.url  JavaScript array slice().js  JavaScript – Check Object Types.url  JavaScript – Get Object Size.js  JavaScript – The For Each Loop.js  JavaScript – The For Loop.js  Keep Node.js script running after logging out from shell.url  (+3 more)
src/jointSPACE/Tv_DirectFB141_2k11/Source/FusionDale/proxy/dispatcher/: Makefile.am
src/jointSPACE/Tv_DirectFB141_2k11/Source/FusionDale/proxy/requestor/: Makefile.am
src/jointSPACE/Tv_DirectFB141_2k11/Source/SaWMan/src/: Makefile.am  Makefile.in  isawman.c  isawman.h  isawmanmanager.c  sawman.c  sawman_config.c  sawman_config.h  sawman_draw.c  sawman_draw.h  sawman_internal.h
test/: test.html
(+489 files in other folders)
